--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </aside>
     <section class="video-player">
       <video id="player" controls autoplay>
-        <source src="channel1.mp4" type="video/mp4">
+        <source src="https://reidoscanais.tv/embed/?id=globorj-globorio" type="video/mp4">
         Seu navegador não suporta o player de vídeo.
       </video>
       <div class="program-info">
